[FIXUP] Dropdown Header wraps is no a div instead of button
... to avoid weird behaviour when placing an input
field inside the dropdown header.

--- a/packages/react-ui-components/src/DropDown/style.css
+++ b/packages/react-ui-components/src/DropDown/style.css
@@ -19,6 +19,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    line-height: var(--goldenUnit);
+    background: var(--brandColorsContrastNeutral);
 
     &:focus {
         outline: 1px dotted var(--brandColorsContrastBrightest);
